--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <div style="text-align: center; color: aliceblue;">
 
 
-    <div style="width: 30%; margin: auto; background-color: aliceblue;border-radius: 50px ;">
-      <img src="./images/UIW.png" alt="" style="width: 100%;">
+    <div style="width: 500px; height:500px; margin: auto; background-color: aliceblue;border-radius: 50% ;">
+      <img src="./images/UIW.png" alt="" style="  margin: auto; margin-top: 50px;">
     </div>
 
     <div style="width: 70%;margin: auto;">
