--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <div style="text-align: center; color: aliceblue;">
 
 
-    <div style="width: 500px; height:500px; margin: auto; background-color: aliceblue;border-radius: 50% ;">
-      <img src="./images/UIW.png" alt="" style="  margin: auto; margin-top: 50px;">
+    <div style="width: 320px; height:320px; margin: auto; background-color: aliceblue;border-radius: 50% ;">
+      <img src="./images/UIW2.png" alt="" style="  margin: auto; margin-top: 50px; max-width: 90%;">
     </div>
 
     <div style="width: 70%;margin: auto;">
